--- a/css/styles.css
+++ b/css/styles.css
@@ -9815,8 +9815,8 @@ a.text-dark:hover, a.text-dark:focus {
   color: #212529 !important;
 }
 
-.text-muted {
-  color: #6c757d !important;
+.text-muted-light {
+  color: #cbd3da !important;
 }
 
 .text-black-50 {
